--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "node -r esm src/server.js"
   },
   "dependencies": {
     "boardgame.io": "^0.39.13",
+    "esm": "^3.2.25",
+    "koa": "^2.12.1",
+    "koa-router": "^9.0.1",
+    "koa-static": "^5.0.0",
+    "node-persist": "^3.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0"
   },
   "browserslist": {
