--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dadtini-web",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "react-scripts start",
@@ -11,19 +11,19 @@
     "serve": "node -r esm server.js"
   },
   "dependencies": {
-    "boardgame.io": "^0.39.13",
+    "boardgame.io": "^0.50.1",
     "esm": "^3.2.25",
     "koa": "^2.12.1",
     "koa-router": "^9.0.1",
     "koa-static": "^5.0.0",
     "node-persist": "^3.1.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "sass": "^1.55.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^2.7.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "5.0.1"
   },
   "browserslist": {
     "production": [
